# olmo-ui

./: .dockerignore  .env  .env.development  .env.test  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.yaml  find-bad-commit.sh  index.d.ts  index.html  jest.config.js  licenses.txt  olmo-ui-licenses.csv  package-lock.json  package.json  panda.config.ts  playwright.config.ts  pull_request_template.md  skiff.json  tsconfig.json  vite.config.mts  vitest-setup.ts  vitest.config.mts  vitest.config.ts  vitest.workspace.ts  webpack.config.js
api/: app.py  (+5 more)
api/dolma_search/infini_gram_api_client/: README.md  __init__.py  pyproject.toml
api/dolma_search/infini_gram_api_client/api/default/: count_index_count_get.py  get_available_indexes_indexes_get.py  get_document_attributions_index_attribution_post.py  health_health_get.py
api/dolma_search/infini_gram_api_client/api/documents/: get_document_by_index_index_documents_document_index_get.py  get_document_by_rank_index_documents_shard_rank_get.py  (+2 more)
api/dolma_search/infini_gram_api_client/models/: __init__.py  attribution_document.py  attribution_request.py  attribution_span.py  attribution_span_with_documents.py  available_infini_gram_index_id.py  document.py  document_with_pointer.py  document_with_pointer_metadata.py  infini_gram_attribution_response.py  infini_gram_attribution_response_with_documents.py  infini_gram_count_response.py  infini_gram_document_response.py  infini_gram_document_response_metadata.py  infini_gram_documents_response.py  search_response.py
(+1267 files in other folders)
